--- a/Chalenge 11/Chalenge 11.cbp
+++ b/Chalenge 11/Chalenge 11.cbp
@@ -2,13 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="condition1" />
-		<Option execution_dir="C:/Users/Youcode/Desktop/STORY/.vscode/condition1/" />
+		<Option title="Chalenge 11" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/condition1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Chalenge 11" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -17,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/condition1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Chalenge 11" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,7 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="../condition1/main.c">
+		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
